--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cesar's Ramirez CIT_481 Blog 10_2022
+title: Cesar's Ramirez CIT_481 Final Blog 10_2022
 
 logo: /assets/img/jenkins.png
 description: A blog for Technology and tools for the CIT comunity
